tests/suite/snapshots/suite__case_yd5x.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceEntry
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Separator
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: SequenceStart
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: Scalar
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 7
- token: Separator
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 15
- token: CollectionEntry
  start:
    line: 0
    column: 15
  end:
    line: 0
    column: 16
- token: Separator
  start:
    line: 0
    column: 16
  end:
    line: 0
    column: 17
- token: Scalar
  start:
    line: 0
    column: 17
  end:
    line: 0
    column: 19
- token: CollectionEntry
  start:
    line: 0
    column: 19
  end:
    line: 0
    column: 20
- token: Separator
  start:
    line: 0
    column: 20
  end:
    line: 0
    column: 21
- token: Scalar
  start:
    line: 0
    column: 21
  end:
    line: 0
    column: 24
- token: Separator
  start:
    line: 0
    column: 24
  end:
    line: 0
    column: 26
- token: SequenceEnd
  start:
    line: 0
    column: 26
  end:
    line: 0
    column: 27
- token: Break
  start:
    line: 0
    column: 27
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: SequenceEntry
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: SequenceStart
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Scalar
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 15
- token: CollectionEntry
  start:
    line: 1
    column: 15
  end:
    line: 1
    column: 16
- token: Separator
  start:
    line: 1
    column: 16
  end:
    line: 1
    column: 17
- token: Scalar
  start:
    line: 1
    column: 17
  end:
    line: 1
    column: 19
- token: CollectionEntry
  start:
    line: 1
    column: 19
  end:
    line: 1
    column: 20
- token: Separator
  start:
    line: 1
    column: 20
  end:
    line: 1
    column: 21
- token: Scalar
  start:
    line: 1
    column: 21
  end:
    line: 1
    column: 26
- token: SequenceEnd
  start:
    line: 1
    column: 26
  end:
    line: 1
    column: 27
- token: Break
  start:
    line: 1
    column: 27
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: SequenceEntry
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: SequenceStart
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: Scalar
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 13
- token: Separator
  start:
    line: 2
    column: 13
  end:
    line: 2
    column: 15
- token: CollectionEntry
  start:
    line: 2
    column: 15
  end:
    line: 2
    column: 16
- token: Separator
  start:
    line: 2
    column: 16
  end:
    line: 2
    column: 17
- token: Scalar
  start:
    line: 2
    column: 17
  end:
    line: 2
    column: 19
- token: CollectionEntry
  start:
    line: 2
    column: 19
  end:
    line: 2
    column: 20
- token: Separator
  start:
    line: 2
    column: 20
  end:
    line: 2
    column: 21
- token: Scalar
  start:
    line: 2
    column: 21
  end:
    line: 2
    column: 26
- token: SequenceEnd
  start:
    line: 2
    column: 26
  end:
    line: 2
    column: 27
- token: Break
  start:
    line: 2
    column: 27
  end:
    line: 3
    column: 0

