tests/suite/snapshots/suite__case_z67p.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 7
- token: MappingValue
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 8
- token: Separator
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: Literal
  start:
    line: 0
    column: 9
  end:
    line: 0
    column: 10
- token: IndentationIndicator
  start:
    line: 0
    column: 10
  end:
    line: 0
    column: 11
- token: Break
  start:
    line: 0
    column: 11
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 2
- token: Scalar
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 7
- token: ScalarBreak
  start:
    line: 1
    column: 7
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Scalar
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 6
- token: MappingValue
  start:
    line: 2
    column: 6
  end:
    line: 2
    column: 7
- token: Separator
  start:
    line: 2
    column: 7
  end:
    line: 2
    column: 8
- token: TagHandle
  start:
    line: 2
    column: 8
  end:
    line: 2
    column: 9
- token: TagSuffix
  start:
    line: 2
    column: 9
  end:
    line: 2
    column: 12
- token: Separator
  start:
    line: 2
    column: 12
  end:
    line: 2
    column: 13
- token: Folded
  start:
    line: 2
    column: 13
  end:
    line: 2
    column: 14
- token: IndentationIndicator
  start:
    line: 2
    column: 14
  end:
    line: 2
    column: 15
- token: Break
  start:
    line: 2
    column: 15
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Scalar
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 6
- token: ScalarBreak
  start:
    line: 3
    column: 6
  end:
    line: 4
    column: 0

