tests/suite/snapshots/suite__case_z9m4.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Directive
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: DirectiveName
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 4
- token: Separator
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 5
- token: TagHandle
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 8
- token: Separator
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: TagPrefix
  start:
    line: 0
    column: 9
  end:
    line: 0
    column: 34
- token: Break
  start:
    line: 0
    column: 34
  end:
    line: 1
    column: 0
- token: DirectivesEnd
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 3
- token: Break
  start:
    line: 1
    column: 3
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: SequenceEntry
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: TagHandle
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 5
- token: TagSuffix
  start:
    line: 2
    column: 5
  end:
    line: 2
    column: 8
- token: Separator
  start:
    line: 2
    column: 8
  end:
    line: 2
    column: 9
- token: DoubleQuote
  start:
    line: 2
    column: 9
  end:
    line: 2
    column: 10
- token: DoubleQuoted
  start:
    line: 2
    column: 10
  end:
    line: 2
    column: 13
- token: DoubleQuote
  start:
    line: 2
    column: 13
  end:
    line: 2
    column: 14
- token: Break
  start:
    line: 2
    column: 14
  end:
    line: 3
    column: 0

