tests/suite/snapshots/suite__case_zf4x.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 12
- token: MappingValue
  start:
    line: 0
    column: 12
  end:
    line: 0
    column: 13
- token: Separator
  start:
    line: 0
    column: 13
  end:
    line: 0
    column: 14
- token: MappingStart
  start:
    line: 0
    column: 14
  end:
    line: 0
    column: 15
- token: Scalar
  start:
    line: 0
    column: 15
  end:
    line: 0
    column: 17
- token: MappingValue
  start:
    line: 0
    column: 17
  end:
    line: 0
    column: 18
- token: Separator
  start:
    line: 0
    column: 18
  end:
    line: 0
    column: 19
- token: Scalar
  start:
    line: 0
    column: 19
  end:
    line: 0
    column: 21
- token: CollectionEntry
  start:
    line: 0
    column: 21
  end:
    line: 0
    column: 22
- token: Separator
  start:
    line: 0
    column: 22
  end:
    line: 0
    column: 23
- token: Scalar
  start:
    line: 0
    column: 23
  end:
    line: 0
    column: 26
- token: MappingValue
  start:
    line: 0
    column: 26
  end:
    line: 0
    column: 27
- token: Separator
  start:
    line: 0
    column: 27
  end:
    line: 0
    column: 28
- token: Scalar
  start:
    line: 0
    column: 28
  end:
    line: 0
    column: 33
- token: MappingEnd
  start:
    line: 0
    column: 33
  end:
    line: 0
    column: 34
- token: Break
  start:
    line: 0
    column: 34
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 10
- token: MappingValue
  start:
    line: 1
    column: 10
  end:
    line: 1
    column: 11
- token: Separator
  start:
    line: 1
    column: 11
  end:
    line: 1
    column: 12
- token: MappingStart
  start:
    line: 1
    column: 12
  end:
    line: 1
    column: 13
- token: Break
  start:
    line: 1
    column: 13
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 4
- token: Scalar
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 6
- token: MappingValue
  start:
    line: 2
    column: 6
  end:
    line: 2
    column: 7
- token: Separator
  start:
    line: 2
    column: 7
  end:
    line: 2
    column: 8
- token: Scalar
  start:
    line: 2
    column: 8
  end:
    line: 2
    column: 10
- token: CollectionEntry
  start:
    line: 2
    column: 10
  end:
    line: 2
    column: 11
- token: Break
  start:
    line: 2
    column: 11
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Separator
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 4
- token: Scalar
  start:
    line: 3
    column: 4
  end:
    line: 3
    column: 7
- token: MappingValue
  start:
    line: 3
    column: 7
  end:
    line: 3
    column: 8
- token: Separator
  start:
    line: 3
    column: 8
  end:
    line: 3
    column: 9
- token: Scalar
  start:
    line: 3
    column: 9
  end:
    line: 3
    column: 14
- token: Break
  start:
    line: 3
    column: 14
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: Separator
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 2
- token: MappingEnd
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 3
- token: Break
  start:
    line: 4
    column: 3
  end:
    line: 5
    column: 0

