tests/suite/snapshots/suite__case_zh7c.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Anchor
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: AnchorName
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: Separator
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: Scalar
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: MappingValue
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 5
- token: Separator
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 6
- token: Scalar
  start:
    line: 0
    column: 6
  end:
    line: 0
    column: 7
- token: Break
  start:
    line: 0
    column: 7
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: MappingValue
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: Separator
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Anchor
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: AnchorName
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 5
- token: Separator
  start:
    line: 1
    column: 5
  end:
    line: 1
    column: 6
- token: Scalar
  start:
    line: 1
    column: 6
  end:
    line: 1
    column: 7
- token: Break
  start:
    line: 1
    column: 7
  end:
    line: 2
    column: 0

