tests/suite/snapshots/suite__case_zk9h.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: MappingStart
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Separator
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: Scalar
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 5
- token: MappingValue
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 6
- token: Separator
  start:
    line: 0
    column: 6
  end:
    line: 0
    column: 7
- token: SequenceStart
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 10
- token: Break
  start:
    line: 0
    column: 10
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Separator
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 2
- token: Scalar
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 7
- token: Break
  start:
    line: 1
    column: 7
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Separator
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: SequenceEnd
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 4
- token: Break
  start:
    line: 2
    column: 4
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: MappingEnd
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Break
  start:
    line: 3
    column: 1
  end:
    line: 4
    column: 0

