tests/suite/snapshots/suite__case_zvh3.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens:  - item1\r\n"
  start:
    index: 14
    line: 1
    column: 0
  end:
    index: 14
    line: 1
    column: 0

