tests/suite/snapshots/suite__case_zwk4.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: Break
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 5
    line: 1
    column: 0
- token: Indent
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 0
- token: Scalar
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 6
    line: 1
    column: 1
- token: MappingValue
  start:
    index: 6
    line: 1
    column: 1
  end:
    index: 7
    line: 1
    column: 2
- token: Separator
  start:
    index: 7
    line: 1
    column: 2
  end:
    index: 8
    line: 1
    column: 3
- token: Scalar
  start:
    index: 8
    line: 1
    column: 3
  end:
    index: 9
    line: 1
    column: 4
- token: Break
  start:
    index: 9
    line: 1
    column: 4
  end:
    index: 11
    line: 2
    column: 0
- token: Indent
  start:
    index: 11
    line: 2
    column: 0
  end:
    index: 11
    line: 2
    column: 0
- token: MappingKey
  start:
    index: 11
    line: 2
    column: 0
  end:
    index: 12
    line: 2
    column: 1
- token: Separator
  start:
    index: 12
    line: 2
    column: 1
  end:
    index: 13
    line: 2
    column: 2
- token: Scalar
  start:
    index: 13
    line: 2
    column: 2
  end:
    index: 14
    line: 2
    column: 3
- token: Break
  start:
    index: 14
    line: 2
    column: 3
  end:
    index: 16
    line: 3
    column: 0
- token: Empty
  start:
    index: 16
    line: 3
    column: 0
  end:
    index: 16
    line: 3
    column: 0
- token: Indent
  start:
    index: 16
    line: 3
    column: 0
  end:
    index: 16
    line: 3
    column: 0
- token: Anchor
  start:
    index: 16
    line: 3
    column: 0
  end:
    index: 17
    line: 3
    column: 1
- token: AnchorName
  start:
    index: 17
    line: 3
    column: 1
  end:
    index: 23
    line: 3
    column: 7
- token: Separator
  start:
    index: 23
    line: 3
    column: 7
  end:
    index: 24
    line: 3
    column: 8
- token: Scalar
  start:
    index: 24
    line: 3
    column: 8
  end:
    index: 25
    line: 3
    column: 9
- token: MappingValue
  start:
    index: 25
    line: 3
    column: 9
  end:
    index: 26
    line: 3
    column: 10
- token: Separator
  start:
    index: 26
    line: 3
    column: 10
  end:
    index: 27
    line: 3
    column: 11
- token: Scalar
  start:
    index: 27
    line: 3
    column: 11
  end:
    index: 28
    line: 3
    column: 12
- token: Break
  start:
    index: 28
    line: 3
    column: 12
  end:
    index: 30
    line: 4
    column: 0

